# AuditIQ

./: .cloudflare-build-config  .env.example  .gitignore  CLOUDFLARE_DEPLOYMENT.md  Dockerfile  README.md  SUPABASE_SETUP.md  add_ml_columns.py  add_predictions_ui.py  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  cleanup_backend.py  cleanup_project.py  create_env_local.py  docker-compose.yml  fix_audit_step.py  fix_routes.py  fix_step_transitions.py  fonctionnalités.txt  middleware.ts  netlify.toml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  reorder_steps.py  update_steps.py  verify_mitigation_richness.py  verify_plotly_report.py  wrangler.toml
app/: globals.css  (+3 more)
backend/: .env.scheduler.example  .gitignore  CONNECTIONS_README.md  F2.3_STATUS.md  MAPPING_FEATURES.md  README.md  alembic.ini  anonymization.py  auth_middleware.py  check_anonymization_columns.py  check_api_url.py  check_db_url.py  check_env.py  check_models.py  create_eda_tables.py  create_test_user.py  db.py  debug_dataset.py  debug_start.py  docker-compose.db.yml  env_backup.txt  fix_env.py  gemini_models.txt  init_db.py  init_postgres.py  main.py  migrate_auth.py  migrate_connections.py  migrate_datasets.py  migrate_db.py  migrate_mapping.py  migrate_profile_management.py  migrate_supabase_complete.py  missing_values.py  pyproject.toml  read_env_raw.py  requirements-test.txt  requirements.txt  requirements_upload.txt  show_db.py  (+28 more)
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/audit_iq_backend/: __init__.py
(+218 files in other folders)
